test/mpi/errors/f90/Makefile.am
##
## Copyright 2026 Argonne National Laboratory
## SPDX-License-Identifier: Apache-2.0
##

include $(top_srcdir)/Makefile_f90.mtest

EXTRA_DIST = testlist.in

SUBDIRS = @iodir@
DIST_SUBDIRS = io
